[gd_scene load_steps=2 format=2]

[ext_resource path="res://networking/Chat.gd" type="Script" id=1]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -543.0
margin_right = 1014.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -267.0
margin_top = -150.0
margin_right = 267.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Message"]
margin_top = 8.0
margin_right = 60.0
margin_bottom = 22.0
text = "Message:"

[node name="TypedMessage" type="LineEdit" parent="Message"]
margin_left = 64.0
margin_right = 534.0
margin_bottom = 30.0
rect_min_size = Vector2( 470, 0 )
max_length = 65

[node name="MessagesFadeOutTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="MessagesFadeOutTimer" to="." method="_on_MessagesFadeOutTimer_timeout"]
